.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:50:44 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/SGDBFichero.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SGDBFichero.d" -MT"src/SGDBFichero.d" -o "src/SGDBFichero.o" "../src/SGDBFichero.cpp"
In file included from ../src/SGDBFichero.cpp:8:0:
../src/SGDBFichero.h: In member function ‘virtual void Dentista::SGDBFichero::guardar(Dentista::Agenda&)’:
../src/SGDBFichero.h:53:27: error: ‘class Dentista::Contacto’ has no member named ‘c_str’
     fich.write(personaAux.c_str(),sizeof(Contacto));
                           ^
make: *** [src/SGDBFichero.o] Error 1
01:51:05 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/SGDBFichero.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SGDBFichero.d" -MT"src/SGDBFichero.d" -o "src/SGDBFichero.o" "../src/SGDBFichero.cpp"
Finished building: ../src/SGDBFichero.cpp
 
Building file: ../src/main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/SGDB.o ./src/SGDBFichero.o ./src/main.o   
Finished building target: Agenda
 
01:51:39 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/SGDBFichero.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SGDBFichero.d" -MT"src/SGDBFichero.d" -o "src/SGDBFichero.o" "../src/SGDBFichero.cpp"
Finished building: ../src/SGDBFichero.cpp
 
Building file: ../src/main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/SGDB.o ./src/SGDBFichero.o ./src/main.o   
Finished building target: Agenda
 
